Layout bug fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -246,3 +246,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .ProseMirror {
+    padding: 0px 18px 20px 18px !important; /* smaller padding for mobile */
+  }
+}
